deploy2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment2
  labels:
    app: deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment2
  template:
    metadata:
      labels:
        app: deployment2
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: volume2
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: volume2
          configMap:
            name: configmap2
