svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: deployment
  ports:
    - name: nginx-http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: multitool-http
      port: 1080
      protocol: TCP
      targetPort: 1080
    - name: multitool-https
      port: 10443
      protocol: TCP
      targetPort: 10443
