svc2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: deployment2
  ports:
    - name: nginx-http
      port: 80
      protocol: TCP
      targetPort: 80
